@@ -4,13 +4,14 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
 import java.net.URL;
+import java.net.URI;
 import org.json.JSONObject;
 
 public class ExchangeRateUtil {
     private static final String API_URL = "https://v6.exchangerate-api.com/v6/20690ac5c9b1e26a3d4abbe9/latest/";
 
     public static double getExchangeRate(String currencyCodeIn, String currencyCodeOut) throws Exception {
-        URL url = new URL(API_URL + currencyCodeIn);
+        URL url = new URI(API_URL + currencyCodeIn).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
 
